# ak_doorbell

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  develop.sh
include/: ak_common_audio.h
include/anyka/: ak_adec.h  ak_vdec.h
patches/: lv_drivers.patch
src/: lv_conf.h  lv_drv_conf.h  main.cpp
src/hw/: display.cpp  display.hpp  pwm.cpp  pwm.hpp
src/log/: logger.cpp  logger.hpp
src/lv_port/: display.cpp  display.hpp  input.cpp  input.hpp  port_init.cpp  port_init.hpp  tick.cpp  tick.hpp
src/ui/: clock.cpp  clock.hpp  clock_screen.cpp  clock_screen.hpp  screen.hpp  screen_manager.cpp  screen_manager.hpp  ui.cpp  ui.hpp
